ipc/ipdl/test/ipdl/error/noProtocolInHeader.ipdlh
protocol noProtocolInHeader {
child:
    __delete__();
};
